# poard

./: .gitignore  .gitmodules  CMakeLists.txt  todo.txt
dependencies/: glad.c
dependencies/assimp/: CMakeLists.txt
dependencies/implot/: implot.h  implot_internal.h
dependencies/implot/.github/: example_implot.cpp
dependencies/include/glad/: glad.h
include/: application.h  buffers.h  camera.h  core.h  input.h  shader.h  texture.h  window.h
res/models/car/: car.mtl  hull.mtl  test.mtl  wheel_l.mtl  wheel_r.mtl
res/models/ground/: grass.mtl  ground.mtl
res/shader/: default.frag  default.vert  fragment.glsl  light.frag  lights.frag  phong.frag  phong.vert  skybox.frag  skybox.vert  texPhong.frag  texlight.frag  texlight.vert  texlights.frag  vertex.glsl  white.vert
src/: Window.cpp  application.cpp  application.h  buffers.cpp  camera.cpp  camera.h  car.cpp  car.h  carScene.cpp  carScene.h  core.h  cubeScene.cpp  cubeScene.h  dirLightScene.cpp  dirLightScene.h  input.cpp  input.h  lightScene.cpp  lightScene.h  main.cpp  modelScene.cpp  modelScene.h  multipleLights.h  multipleTexLights.cpp  multipleTexLights.h  renderer.cpp  renderer.h  scene.h  shader.cpp  shader.h  texLightScene.cpp  texLightScene.h  texture.cpp  texture.h  wheel.cpp  wheel.h  window.cpp
src/core/: application.cpp  application.h  camera.cpp  camera.h  core.h  gui.cpp  input.cpp  input.h  main.cpp  poard.h  renderer.cpp  renderer.h  scene.h  shader.cpp  shader.h  texture.cpp  texture.h  window.cpp  window.h
src/poard/: poard.h
src/poard/core/: application.cpp  application.h  core.h  gui.cpp  gui.h  input.cpp  input.h  scene.h  window.cpp
src/poard/renderer/: buffers.cpp  buffers.h  camera.cpp  camera.h  cubemap.cpp  cubemap.h  lights.cpp  lights.h  mesh.cpp  mesh.h  model.cpp  model.h  shader.cpp  shader.h  texture.cpp  texture.h
